<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    >
    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/title"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_height="wrap_content"
        android:text="@string/child_monitor"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        android:fontFamily="sans-serif-condensed"
        android:layout_centerHorizontal="true"
        />



    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_below="@id/title"
        >
    <TextView
        android:id="@+id/text_view_login"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/text_view_email"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email_here"
        android:inputType="textEmailAddress"
        android:textColor="#E2E2E2"
        android:textColorHint="#999999" />
    <TextView
        android:id="@+id/text_view_password"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
         />
    <EditText
        android:id="@+id/edit_text_password"
        android:textColor="#E2E2E2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_password_here"
        android:textColorHint="#999999"
        android:inputType="textPassword"
        android:ems="10" />
  
    <Button
        android:id="@+id/button_login"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_button_background"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login"
        android:layout_marginHorizontal="50dp"
        />
    <TextView
        android:id="@+id/lnkRegister1"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/new_here_register_here"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        />
    </LinearLayout>
</RelativeLayout>